  - sidplay: add option "default_genre"
  - sidplay: map SID name field to "Album" tag
* playlist
  - flac: support reading CUE sheets from remote FLAC files
* filter
  - ffmpeg: new plugin based on FFmpeg's libavfilter library
  - hdcd: new plugin based on FFmpeg's "af_hdcd" for HDCD playback
  - volume: convert S16 to S24 to preserve quality and reduce dithering noise
* output
  - jack: add option "auto_destination_ports"
  - jack: report error details
  - pulse: add option "media_role"
* lower the real-time priority from 50 to 40
* switch to C++17
  - GCC 7 or clang 4 (or newer) recommended

ver 0.21.19 (2020/01/17)
* configuration
  - allow overriding top-level settings in includes
* output
  - pulse: obey Pulse's maximum sample rate (fixes DSD128 playback)
* fix build failure with clang 10
* fix build failure with Android NDK r20

ver 0.21.18 (2019/12/24)
* protocol
  - work around Mac OS X bug in the ISO 8601 parser
* output
  - alsa: fix hang bug with ALSA "null" outputs
* storage
  - curl: fix crash bug
* drop support for CURL versions older than 7.32.0
* reduce unnecessary CPU wakeups

ver 0.21.17 (2019/12/16)
* protocol
  - relax the ISO 8601 parser: allow omitting field separators, the
    time of day and the "Z" suffix
* archive
  - zzip: improve error reporting
* outputs
  - jack: mark ports as terminal
  - shout: declare metadata as UTF-8
* fix build failure with -Ddatabase=false

ver 0.21.16 (2019/10/16)
* queue
  - fix relative destination offset when moving a range
* storage
  - curl: request the "resourcetype" property to fix database update
  - curl: URL-encode more paths
  - curl: follow redirects for collections without trailing slash
* update
  - fix crash when music_directory is not a directory
* fix build with iconv() instead of ICU

ver 0.21.15 (2019/09/25)
* decoder
  - dsdiff, dsf: fix displayed bit rate
  - mpcdec: fix bogus ReplayGain values
* output
  - solaris: fix build with glibc 2.30

ver 0.21.14 (2019/08/21)
* decoder