@@ -79,6 +79,7 @@ enum class ConfigOption {
 	DESPOTIFY_USER,
 	DESPOTIFY_PASSWORD,
 	DESPOTIFY_HIGH_BITRATE,
+	DSD2PCM_CONVERTER,
 	MAX
 };
 
